    code producing different results.

          Option     |  New Default   |  Old Default
      ------------------------------------------------
        FinDiffType  |   "forward"    |   "central"
        MaxFunEvals  | 100*length(x0) |     Inf
        TolFun       |     1e-6       |     1e-7
        TolX         |     1e-6       |     1e-7
        Updating     |     "off"      |     "on"

 ** Figure graphic objects have a new property "Number" which is
    read-only and will return the handle (number) of the figure.
    However, if the property "IntegerHandle" has been set to "off" then
    the property will return an empty matrix ([]).

 ** Printing using the -dtiff output device will now create compressed
    images using lzw compression.  This change was made for Matlab
    compatibility.  To produce uncompressed images use the -dtiffn
    device.

 ** The FFTW library is now required to perform FFT calculations.  The
    FFTPACK sources have been removed from Octave.

 ** The OSMesa library is no longer used.  To print invisible figures
    when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
    available and you must use the qt graphics toolkit.

 ** New functions added in 5.0:

      ordeig

 ** Deprecated functions.

    The following functions have been deprecated in Octave 5.0 and will
    be removed from Octave 7 (or whatever version is the second major
    release after 5.0):

      Function             | Replacement
      ---------------------|------------------
                           |

 ** The following functions were deprecated in Octave 4.2 and have been
    removed from Octave 5.0.

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      mahalanobis          | mahal in Octave-Forge statistics pkg
      md5sum               | hash
      octave_config_info   | __octave_config_info__
      onenormest           | normest1