@@ -32,6 +32,10 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
         TolX         |     1e-6       |     1e-7
         Updating     |     "off"      |     "on"
 
+ ** The fminsearch function has changed default TolFun accuracy to 1e-4
+    from 1e-7.  This change was made for Matlab compatibility, but may
+    result in different results from existing code.
+
  ** Figure graphic objects have a new property "Number" which is
     read-only and will return the handle (number) of the figure.
     However, if the property "IntegerHandle" has been set to "off" then
